# GrantHunt

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE_1.md  IMPLEMENTATION_PLAN_PHASE_2.md  IMPLEMENTATION_PLAN_PHASE_3.md  IMPLEMENTATION_PLAN_PHASE_4.md  IMPLEMENTATION_PLAN_PHASE_4_1.md  IMPLEMENTATION_PLAN_PHASE_4_2.md  IMPLEMENTATION_PLAN_PHASE_4_3.md  IMPLEMENTATION_STATUS.md  README.md  REFACTORING_PLAN.md  grant_profile.example.yaml  grant_profile.yaml  grant_sources.example.yaml  grant_sources.yaml  grants.db  job_profile.yaml  job_sources.yaml  pyproject.toml
.claude/: .anima-setup  settings.json  settings.local.json
.claude/agents/: company-researcher.md
.claude/commands/: check-update.md  curiosity-queue.md  curious.md  detect-achievements.md  diary.md  dissonance.md  dream-wake.md  dream.md  forget.md  memories.md  memory-export.md  memory-graph.md  memory-import.md  memory-stats.md  recall.md  refresh-memories.md  remember.md  research.md  sign-memories.md  update.md  version.md
docs/: CAE_Research_Interview_Prep.md  GitHub - ashishps1-learn-ai-engineering- Learn AI and LLMs from scratch using free resources · GitHub.url  LLMInterviewQuestions.md  MOCKUPS.md  QUICKSTART.md
profile/: flotexa.md  linkedin_profile.md  resume_canva_draft.md  resume_matthieu_boujonnier.md
src/granthunt/: application.py  cli.py  config.py  cover_letter.py  db.py  matcher.py  models.py  research.py  scraper.py
src/jobhunt/: cli.py  config.py  cover_letter.py  db.py  matcher.py  models.py  scraper.py
study/: PROGRESS.md  STUDY_PLAN.md
(+67 files in other folders)
