[project]
name = "interviews"
version = "0.1.0"
description = "Job search automation and interview preparation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
jobhunt = "jobhunt.cli:app"

[dependency-groups]
dev = [
    "anima[eyes,tts]",
]

[tool.uv]
package = true

[tool.uv.sources]
anima = { path = "../Antigravity-LTM/dist/anima-0.15.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobhunt"]
