[project]
name = "granthunt"
version = "0.1.0"
description = "Grant discovery and application tracking for startups"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "markdown>=3.10.2",
    "python-multipart>=0.0.22",
]

[project.scripts]
granthunt = "granthunt.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/granthunt"]
